@@ -65,7 +65,7 @@ $string['confalts'] = '- OR - <br />Confirmation page';
 $string['confirmdelallresp'] = 'Are you sure you want to delete ALL the responses in this questionnaire?';
 $string['confirmdelchildren'] = 'If you delete this question, its child(ren) question(s) will also be deleted:';
 $string['confirmdelgroupresp'] = 'Are you sure you want to delete ALL the responses of {$a}?';
-$string['confirmdelquestion'] = 'Are you sure you want to delete question {$a}?';
+$string['confirmdelquestion'] = 'Are you sure you want to delete the question at position {$a}?';
 $string['confirmdelquestionresps'] = 'This will also delete the {$a} response(s) already given to that question.';
 $string['confirmdelresp'] = 'Are you sure you want to delete the response by&nbsp;{$a}&nbsp;?';
 $string['confpage'] = 'Heading text';
@@ -91,7 +91,9 @@ $string['deletedresp'] = 'Deleted Response';
 $string['deleteresp'] = 'Delete this Response';
 $string['deletingresp'] = 'Deleting Response';
 $string['dependquestion'] = 'Parent Question';
-$string['dependquestion_help'] = 'TODO';
+$string['dependquestion_help'] = 'You can select a parent question and a choice option for this question. A child question will only be displayed
+                to the student if its parent question and parent choice have been previously selected.';
+$string['dependquestion_link'] = 'mod/questionnaire/questions#Parent_Question';
 $string['displaymethod'] = 'Display method not defined for question.';
 $string['download'] = 'Download';
 $string['downloadtextformat'] = 'Download in text format';
@@ -137,12 +139,13 @@ $string['invalidresponse'] = 'Invalid response specified.';
 $string['invalidresponserecord'] = 'Invalid response record specified.';
 $string['invalidsurveyid'] = 'Invalid questionnaire ID.';
 $string['kindofratescale'] = 'Type of rate scale';
-$string['kindofratescale_help'] = 'See the Moodle Documentation below';
+$string['kindofratescale_help'] = 'Right-click on the More Help link below.';
 $string['kindofratescale_link'] = 'mod/questionnaire/questions#Type_of_rate_scale';
 $string['lastrespondent'] = 'Last Respondent';
 $string['length'] = 'Length';
 $string['managequestions'] = 'Manage questions';
-$string['managequestions_help'] = 'Manage questions HELP TODO';
+$string['managequestions_help'] = 'In the Manage questions section of the Edit Questions page, you can conduct a number of operations on a Questionnaire\'s questions.';
+$string['managequestions_link'] = 'mod/questionnaire/questions#Manage_questions';
 $string['maxdigitsallowed'] = 'Max. digits allowed';
 $string['maxdigitsallowed_help'] = 'By using the Max. digits allowed and Nb of decimal digits parameters you can specify
  the length and number of decimal places required.';
@@ -168,6 +171,7 @@ $string['myresults'] = 'Your Results';
 $string['name'] = 'Name';
 $string['navigate'] = 'Allow branching questions';
 $string['navigate_help'] = 'TODO';
+$string['navigate_link'] = 'TODO';
 $string['next'] = 'Next';
 $string['nextpage'] = 'Next Page';
 $string['noanswer'] = 'No answer';
@@ -233,6 +237,7 @@ $string['page'] = 'Page';
 $string['pageof'] = 'Page {$a->page} of {$a->totpages}';
 $string['pluginadministration'] = 'Questionnaire administration';
 $string['pluginname'] = 'Questionnaire';
+$string['position'] = 'position';
 $string['possibleanswers'] = 'Possible answers';
 $string['posteddata'] = 'Reached page with posted data:';
 $string['preview'] = 'This is a preview of how this questionnaire will look. When you are done previewing, click <strong>Close</strong> at the bottom of this page.';
@@ -356,7 +361,7 @@ $string['strfdate'] = '%d/%m/%Y';
 $string['strfdateformatcsv'] = 'd/m/Y H:i:s';
 $string['submitoptions'] = 'Submission options';
 $string['submitpreview'] = 'Submit preview';
-$string['submitpreviewcorrect'] = 'This submission would be accepted as correct.';
+$string['submitpreviewcorrect'] = 'This submission would be accepted as correctly filled in.';
 $string['submitsurvey'] = 'Submit questionnaire';
 $string['submitted'] = 'Submitted on:';
 $string['subtitle'] = 'Subtitle';
